force-app/main/default/objects/FS_Initial_Order_Setting__c/FS_Initial_Order_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Initial Order Setting</label>
</CustomObject>