force-app/main/default/objects/FS_Initial_Order_Setting__c/fields/FS_New_Install_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_New_Install_Record_Type_Id__c</fullName>
    <label>New Install Record Type Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>