force-app/main/default/objects/FS_Initial_Order_Setting__c/fields/FS_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_Record_Id__c</fullName>
    <label>Record Id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>