force-app/main/default/objects/FS_Initial_Order_Setting__c/fields/FS_X7000_Series_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>FS_X7000_Series_Record_Type_Id__c</fullName>
    <label>7000 Series Record Type Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>