force-app/main/default/objects/FS_Initial_Order_Setting__c/fields/Installation_Id__c.field-meta.xml
<CustomField>
    <fullName>Installation_Id__c</fullName>
    <label>Installation Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>