force-app/main/default/objects/FS_Initial_Order_Setting__c/fields/Installation_Name__c.field-meta.xml
<CustomField>
    <fullName>Installation_Name__c</fullName>
    <label>Installation Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>